Fix house features overflow and size

--- a/src/sass/components/_house-feature.scss
+++ b/src/sass/components/_house-feature.scss
@@ -1,11 +1,11 @@
 .house-feature {
   display: grid;
-  grid-template-rows: repeat(4, max-content);
+  grid-template-rows: 27vh repeat(3, max-content);
   gap: 2.4rem;
 
   &__image {
     height: 100%;
-    width: 100%;
+    width: auto;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     object-fit: cover;
@@ -16,6 +16,7 @@
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     justify-self: start;
+    align-self: end;
     display: flex;
     align-items: center;
     gap: 0.8rem;
