--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -70,6 +70,7 @@
 
 .features {
   margin: 12.4rem;
+  overflow: hidden;
 
   &__label {
     margin-bottom: 1.2rem;
